# zero-to-ai-agent

./: .gitignore  README.md
appendices/: A.md  B.md  C.md  D.md  README.md
part_1_python/chapter_01_setup/: README.md  environment_check.py  exercise_1_1_1_solution.py  exercise_1_1_2_solution.md  exercise_1_1_3_solution.md  exercise_1_1_4_solution.py  exercise_1_1_5_solution.py  exercise_1_1_6_solution.py  exercise_2_1_1_solution.py  exercise_2_1_3_solution.py  exercise_2_1_4_solution.py  exercise_2_1_5_solution.py  exercise_3_1_1_solution.md  exercise_3_1_3_solution.py  exercise_3_1_4_solution.py  exercise_3_1_5_solution.py  first_program.py  flow_test.py  hello.py  journal.py  my_first_program.py  my_packages.py  python_calculator.py  quote_fetcher.py  version_test.py  weather_check.py
part_1_python/chapter_02_variables/: README.md  advanced_print.py  basic_arithmetic.py  basic_input.py  boolean_basics.py  comment_basics.py  common_mistakes.py  comparison_operators.py  converting_to_boolean.py  converting_to_numbers.py  converting_to_strings.py  creating_strings.py  different_variables.py  division_surprise.py  exercise_1_2_1_solution.py  exercise_1_2_2_solution.py  exercise_1_2_3_solution.py  (+46 more)
part_5_production/chapter_20_capstone/caspar_20_1/: .env.template  .gitignore  docker-compose.yml  pyproject.toml  requirements.txt
part_5_production/chapter_20_capstone/caspar_20_1/scripts/: test_postgres.py
part_5_production/chapter_20_capstone/caspar_20_1/src/caspar/config/: __init__.py
part_5_production/chapter_20_capstone/caspar_20_7/: pyproject.toml
(+903 files in other folders)
